--- a/src/app/pages/games/games.page.html
+++ b/src/app/pages/games/games.page.html
@@ -7,7 +7,9 @@
   </ion-header>
 
 <ion-content>
-  <h1>Bienvenido {{ name }}</h1>
+  <div id="msg">
+    <h1>Bienvenido {{ name }}</h1>
+  </div>
     <ion-slides [options]="slideOpts" style="height: 100%;">
    
         <ion-slide>
