--- a/src/app/components/docs-prehistoire/docs-prehistoire.component.html
+++ b/src/app/components/docs-prehistoire/docs-prehistoire.component.html
@@ -1,6 +1,6 @@
 <div style="padding: 16px;">
   <div style="width: 100%; display: flex; justify-content: center;">
-  <h2>La Prehistoire</h2>  
+  <h2>La Prehistoria</h2>  
   </div>
 
   <p  style="margin-top: 50px;">Le Paléolithique est la première et la plus longue période de la Préhistoire, presque contemporaine du Pléistocène, durant laquelle les humains sont tous des chasseurs-cueilleurs. Les hommes du Paléolithique sont la plupart du temps nomades, se déplaçant au gré des saisons en fonction des ressources alimentaires disponibles, qu'elles soient végétales ou animales.</p>
