--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -62,12 +62,12 @@
   <ion-tab-bar slot="bottom" main>
     <ion-tab-button tab="games">
       <ion-icon name="calendar"></ion-icon>
-      <ion-label >Quiz</ion-label>
+      <ion-label >Quizzes</ion-label>
     </ion-tab-button>
  
     <ion-tab-button tab="docs">
       <ion-icon name="boat"></ion-icon>
-      <ion-label>Docs</ion-label>
+      <ion-label>Organizaciones</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="account">
