--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
 
             <a routerLink="/sign-in" class="flex-right-x">Perdiste tu contraseña?</a>
           
-            <ion-button type="submit" expand="full" routerLink="/tabs" routerDirection="forward" class="full-length margin-text form-rounded">INGRESAR</ion-button>
+            <ion-button (click)="loginFunction()" expand="full" routerLink="/tabs" routerDirection="forward" class="full-length margin-text form-rounded">INGRESAR</ion-button>
             
             <div class="form-group flex-center-x-row margin-input">
              <p> Aún no te has registrado?</p> <a routerLink="/sign-in" style="margin-left: 3%;">Registrate</a>
