cleaning up the code

--- a/src/app/pages/results/results.page.html
+++ b/src/app/pages/results/results.page.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding">
-Ouais... Si tu veux gros
+bla bla
 
-<ion-button routerLink="/games">Retourner au Home</ion-button>
+<ion-button routerLink="/games">Volver al Home</ion-button>
 </ion-content>
