--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -62,7 +62,7 @@
   <ion-tab-bar slot="bottom" main>
     <ion-tab-button tab="games">
       <ion-icon name="calendar"></ion-icon>
-      <ion-label >Quizzes</ion-label>
+      <ion-label >Tus Quizzes</ion-label>
     </ion-tab-button>
  
     <ion-tab-button tab="docs">
