--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -7,7 +7,7 @@
           
           <div class="contentFlex">
             <ion-avatar style="height: 7rem; width: 7rem">
-                <ion-img src="./assets/patrik.jpg"></ion-img> 
+                <ion-img src=""></ion-img> 
             </ion-avatar>
           <div class="contentFlexMargin">
             <h2 style="font-size: 1.1rem; margin-bottom: 0; color: white;">El_Tano</h2>
