--- a/src/app/pages/docs/docs.page.html
+++ b/src/app/pages/docs/docs.page.html
@@ -21,7 +21,11 @@
          <ion-row> <ion-label class="ion-text-wrap"> {{s.email}} </ion-label> </ion-row>
 
 
-          <a href="{{s.logo}}"  target="_blank"><ion-button type="submit" color="primary" shape="full" expand="block">Más Info</ion-button></a>
+         <!-- (click)=""  -->
+         <ion-button 
+         expand="full" 
+          routerLink="/game-prehistoire" routerDirection="forward"   
+          class="full-length margin-text form-rounded">Ver Quizzes</ion-button>
          </ion-col>                         
       </ion-item>
            
