fixing local storage & adding endpoints file

--- a/src/app/pages/games/games.page.html
+++ b/src/app/pages/games/games.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <div id="msg">
-    <h2 class="userName">Ulises,{{ name }}</h2>
+    <h2 class="userName">{{firstName}} </h2>
     <p>estos son tus quizzes</p>
   </div>
   <ion-list>
