finding user quizzes

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -7,11 +7,12 @@
           
           <div class="contentFlex">
             <ion-avatar style="height: 7rem; width: 7rem">
-                <ion-img src=""></ion-img> 
+                <ion-img src={{photo}}></ion-img> 
             </ion-avatar>
           <div class="contentFlexMargin">
-            <h2 style="font-size: 1.1rem; margin-bottom: 0; color: white;">El_Tano</h2>
+            <h2 style="font-size: 1.1rem; margin-bottom: 0; color: white;">{{firstName}} {{lastName}}</h2>
             <p  style="font-size: 0.8rem; color:#DADADA;">Nivel</p>
+            <h6 style="font-size: 1.1rem; margin-bottom: 0; color: white;">{{email}}</h6>
           </div>    
         </div>
           <div style="display: flex; justify-content: space-around; margin-top: 13px;">
