adding structure for school info & quiz

--- a/src/app/pages/docs/docs.page.html
+++ b/src/app/pages/docs/docs.page.html
@@ -24,8 +24,8 @@
          <!-- (click)=""  -->
          <ion-button 
          expand="full" 
-          routerLink="/game-prehistoire" routerDirection="forward"   
-          class="full-length margin-text form-rounded">Ver Quizzes</ion-button>
+          routerLink="/orgs" routerDirection="forward"   
+          class="full-length margin-text form-rounded">Más Info</ion-button>
          </ion-col>                         
       </ion-item>
            
