--- a/src/app/pages/game-prehistoire/game-prehistoire.page.html
+++ b/src/app/pages/game-prehistoire/game-prehistoire.page.html
@@ -6,7 +6,7 @@
   </svg>
 </div>       
 <div class="progress" style="width: 15rem; border-radius: 17px; margin-left: 10px;">
-  <div class="progress-bar" role="progressbar" [ngStyle]="{'width': progress(), 'border-radius': '17px', 'background-color': '#84dc00'}" aria-valuemin="0" aria-valuemax="100"></div>
+  <!-- <div class="progress-bar" role="progressbar" [ngStyle]="{'width': progress(), 'border-radius': '17px', 'background-color': '#84dc00'}" aria-valuemin="0" aria-valuemax="100"></div> -->
   </div>
   <div style="display: flex; margin-top: 3px; margin-left: 10px; padding: 14px;">
   <ion-icon name="heart"  [ngClass]="{'red-heart': true, 'grey-heart': life === 0}"></ion-icon>
@@ -16,17 +16,17 @@
 </div>
 
 <ion-content>
-  <div style="padding: 16px;width: 100%; height: 100%;">
+   <div style="padding: 16px;width: 100%; height: 100%;">
     <div>
-    <h3 class="font-question">{{questions[id].questionText}}</h3>
+    <h3 class="font-question"></h3>
   </div>
 
   <div class="flex-center-x-column2">
     <div style="width: 100%; margin-top: 28%;">
-       <div  *ngFor="let answer of questions[id].answers; let i = index;" (click)="activeButton(i)"
+       <!-- <div  *ngFor="let answer of questions[id].answers; let i = index;" 
         [ngClass]="{'button-class': true, 'button-class-active': isActive[i] === true}" >
           {{answer.answer}}
-        </div>
+        </div> -->
      </div>
 </div>
 <!-- check buttons et div de validation-->
@@ -35,11 +35,11 @@
 CHECK
 </div>
 
-<div (click)="check()"
+<div 
 class="button-check"  *ngIf="CheckButton === true && !disabledButton">
  CHECK
 </div>
-<div (click)="validated()"
+<div 
 [ngClass]="{'button-check': true,
   'button-check-active': solutionDiv === true,
   'button-check-false': solutionDiv === false}"  *ngIf="CheckButton === false">
@@ -47,7 +47,7 @@ class="button-check"  *ngIf="CheckButton === true && !disabledButton">
 </div>
 </div>
 <div [ngClass]="{'false-div': solutionDiv === false, 'correct-div': solutionDiv === true }" *ngIf="CheckButton === false">
-<p [ngClass]="{'false-title': solutionDiv === false, 'correct-title': solutionDiv === true }">{{ solutionTitle }}</p>
-<p [ngClass]="{'false-text': solutionDiv === false}"> {{ solutionText }}</p>
-</div>
+<p [ngClass]="{'false-title': solutionDiv === false, 'correct-title': solutionDiv === true }"></p>
+<p [ngClass]="{'false-text': solutionDiv === false}"> </p>
+</div> -->
 </ion-content>
