--- a/src/app/pages/games/games.page.html
+++ b/src/app/pages/games/games.page.html
@@ -25,9 +25,9 @@
           <ion-card-content>{{q.description}}</ion-card-content>
 
           <ion-button color="light">
-            <a href="" class="aInfo" target="_blank">
-              Más info
-            </a>
+            <a routerLink="/game-prehistoire" class="aInfo"> Ir al Quiz </a>
+           
+                     
           </ion-button>
         </ion-card>
 
