--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -61,17 +61,17 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom" main>
     <ion-tab-button tab="games">
-      <ion-icon name="calendar"></ion-icon>
+      <ion-icon name="albums"></ion-icon>
       <ion-label >Tus Quizzes</ion-label>
     </ion-tab-button>
  
     <ion-tab-button tab="docs">
-      <ion-icon name="boat"></ion-icon>
+      <ion-icon name="school"></ion-icon>
       <ion-label>Organizaciones</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="account">
-      <ion-icon name="information-circle"></ion-icon>
+      <ion-icon name="finger-print"></ion-icon>
       <ion-label>Mi Cuenta</ion-label>
     </ion-tab-button>
  
