--- a/src/app/pages/orgs/orgs.page.html
+++ b/src/app/pages/orgs/orgs.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Quizzes x Org</ion-title>
+    <ion-title>{{name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
