--- a/src/app/pages/docs/docs.page.html
+++ b/src/app/pages/docs/docs.page.html
@@ -1,15 +1,35 @@
-  <div style="background: #001e3c; height: 9%; display: flex; align-items: center;"> 
-      <ion-buttons slot="start" style="padding: 15px;">
-          <ion-icon name="list"  (click)="openFirst()" style="color: white; font-size: 22px;"></ion-icon>
-          
-      </ion-buttons>       
-  </div>
-
 <ion-content class="ion-padding">
+  <div class="menuContainerOrg">
+    <ion-icon name="menu" (click)="openFirst()"></ion-icon>
+    <ion-icon name="more"></ion-icon>
+  </div>
   <ion-list>
-    <ion-item-sliding *ngFor="let s of Schools" >
-     
-      <ion-item>
+    <ion-item-sliding *ngFor="let s of Schools">
+      <ion-card>
+        <div class="quizImg">
+          <img src="{{s.logo}}" />
+        </div>
+        <ion-card-header>
+          <ion-card-title>{{s.name}}</ion-card-title>
+          <ion-card-subtitle>{{s.city}}, {{s.country}}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          {{s.description}}<br />
+          {{s.email}}
+        </ion-card-content>
+
+        <ion-button
+          color="light"
+          routerLink="/orgs"
+          routerDirection="forward"
+          class="full-length margin-text form-rounded"
+          >Más Info
+        </ion-button>
+      </ion-card>
+    </ion-item-sliding>
+  </ion-list>
+
+  <!-- <ion-item>
        <ion-col id="col1"> 
          <ion-img src="{{s.logo}}"> </ion-img></ion-col>
        <ion-col id="col2">
@@ -20,16 +40,14 @@
          <ion-row> <ion-label class="ion-text-wrap"> {{s.description}} </ion-label> </ion-row>
          <ion-row> <ion-label class="ion-text-wrap"> {{s.email}} </ion-label> </ion-row>
 
-
-         <!-- (click)=""  -->
          <ion-button 
          expand="full" 
           routerLink="/orgs" routerDirection="forward"   
           class="full-length margin-text form-rounded">Más Info</ion-button>
          </ion-col>                         
-      </ion-item>
-           
-    </ion-item-sliding>   
+      </ion-item> -->
 
-</ion-list>
+  <!--     </ion-item-sliding>   
+
+</ion-list> -->
 </ion-content>
