--- a/src/app/pages/docs/docs.page.scss
+++ b/src/app/pages/docs/docs.page.scss
@@ -1,8 +1,7 @@
-.head-white{
-    background: white;
+.menuContainerOrg {
+    margin-top: 1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
 }
-
-.head-coloring{
-    background: blueviolet;
-}
-
