--- a/src/app/pages/games/games.page.scss
+++ b/src/app/pages/games/games.page.scss
@@ -28,6 +28,10 @@
     font-size: x-small;
 }
 
-.userName {
-    margin-top: 2rem;
+.menuContainer {
+    margin-top: 1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
 }
