--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Quiz</ion-title>
+    <ion-title>{{name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <img src="{{logo}}" />
+ <p>Descripción: {{description}}</p> 
+ <p>Cantidad de preguntas: {{quantity}}</p> 
 
+ <p>{{this.School.name}}</p> 
+ <img src="{{this.School.logo}}" />
+ <p>{{this.Subject.name}}</p> 
 </ion-content>
