fixing breaking changes

--- a/src/app/pages/games/games.page.html
+++ b/src/app/pages/games/games.page.html
@@ -27,6 +27,9 @@
             
           </ion-button>
         </ion-card>
+      </ion-item-sliding>
+    </ion-list>
+  </ion-content>
         <!-- <a routerLink="/quiz" class="aInfo"> Ir al Quiz </a> -->
 
       <!-- <ion-item>
@@ -48,4 +51,4 @@
       </ion-card>
     </ion-item-sliding>
   </ion-list>
-</ion-content>
+</ion-content>-->
