--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -5,11 +5,11 @@
 </ion-header>
 
 <ion-content>
-  <img src="{{logo}}" />
+  <!-- <img src="{{logo}}" />
  <p>Descripción: {{description}}</p> 
  <p>Cantidad de preguntas: {{quantity}}</p> 
 
  <p>{{this.School.name}}</p> 
  <img src="{{this.School.logo}}" />
- <p>{{this.Subject.name}}</p> 
+ <p>{{this.Subject.name}}</p>  -->
 </ion-content>
