--- a/src/app/pages/docs/docs.page.html
+++ b/src/app/pages/docs/docs.page.html
@@ -45,7 +45,7 @@
       </ion-item>
       routerLink="/orgs" routerDirection="forward"    -->
            
-    </ion-item-sliding>   
+    <!-- </ion-item-sliding>   
 
-</ion-list> -->
+</ion-list>  -->
 </ion-content>
