--- a/src/app/pages/orgs/orgs.page.html
+++ b/src/app/pages/orgs/orgs.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons mode="ios" slot="start" >
+      <ion-back-button text="Atrás" defaultHref="/tabs/docs"></ion-back-button>
+      </ion-buttons>
     <ion-title>{{name}}</ion-title>
   </ion-toolbar>
 </ion-header>
