--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons mode="ios" slot="start" >
+    <ion-back-button text="Atrás" defaultHref="/tabs/games"></ion-back-button>
+    </ion-buttons>
     <ion-title>{{name}}</ion-title>
   </ion-toolbar>
 </ion-header>
