starting the logic of the quiz page

--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -15,4 +15,29 @@
  <p>{{this.School.name}}</p> 
  <img src="{{this.School.logo}}" />
  <p>{{this.Subject.name}}</p> 
+
+
+ <ion-button (click)="comenzar()" shape="round" fill="outline">Comenzar!!</ion-button>
+
+ <ion-list>
+  <ion-item-sliding *ngFor="let q of Questions" >
+   
+      <ion-card>
+  
+        <ion-card-header>
+          <ion-card-title>bla bla</ion-card-title>
+          <ion-card-subtitle>bla bla 2</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>bla bla 3</ion-card-content>
+
+        <ion-button color="light" *ngFor="let a of Answers" 
+        (click)="1+1" 
+        
+        >
+          Acá va la respuesta
+          
+        </ion-button>
+      </ion-card>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
