--- a/src/app/pages/account/account.page.scss
+++ b/src/app/pages/account/account.page.scss
@@ -1,54 +1,216 @@
-.imgDiv{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.imgDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.main-back{
-   background: #f7f9fc;
+.main-back {
+  background: #f7f9fc;
 }
 
-.btnflex{
-   display: flex;
-   flex-direction: row;
+.btnflex {
+  display: flex;
+  flex-direction: row;
 }
 
-.text{
-font-family: Roboto;
- font-size: 14px;
+.text {
+  font-family: Roboto;
+  font-size: 14px;
   color: rgb(187, 187, 187);
-  margin: 0; 
-}
-
-
-.text2{
-   font-family: Roboto-light;
-    font-size: 15px;
-     color: rgb(187, 187, 187);
-     margin: -2px 0 0 0; 
-   }
-
-   
-.text3{
-   font-family: Roboto;
-   margin: 1px 0 0 0
-   }
-
-.text4{
-font-family: Roboto;
- font-size: 15px;
   margin: 0;
-  color: white; 
 }
 
+.text2 {
+  font-family: Roboto-light;
+  font-size: 15px;
+  color: rgb(187, 187, 187);
+  margin: -2px 0 0 0;
+}
 
-.head{
-  display: flex; 
+.text3 {
+  font-family: Roboto;
+  margin: 1px 0 0 0;
+}
+
+.text4 {
+  font-family: Roboto;
+  font-size: 15px;
+  margin: 0;
+  color: white;
+}
+
+.head {
+  display: flex;
   flex-direction: column;
   box-shadow: 0 12px 20px #cfcfcf;
-  background: linear-gradient(217deg, #1759b1, rgba(0,225, 255,0) 80.71%),
-               linear-gradient(127deg, rgb(1, 206, 172), rgba(19, 2, 255, 0) 70.71%),
-               linear-gradient(360deg, rgb(113, 0, 179), rgba(113, 0, 179, 0.287) 80.71%)
-
+  background: linear-gradient(217deg, #1759b1, rgba(0, 225, 255, 0) 80.71%),
+    linear-gradient(127deg, rgb(1, 206, 172), rgba(19, 2, 255, 0) 70.71%),
+    linear-gradient(360deg, rgb(113, 0, 179), rgba(113, 0, 179, 0.287) 80.71%);
 }
-   
+
+.containerTop {
+  padding: 25px 20px 20px 20px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  font-size: 22px;
+}
+
+.avatar {
+  height: 7rem;
+  width: 7rem;
+}
+
+.userInfo {
+  font-size: 1.1rem;
+  margin-bottom: 0;
+  color: white;
+}
+
+.userLevel {
+  font-size: 0.8rem;
+  color: #dadada;
+}
+
+.userEmail {
+  font-size: 1.1rem;
+  margin-bottom: 0;
+  color: white;
+}
+
+.containerMenu {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 13px;
+}
+
+.general {
+  border-bottom: solid white;
+  display: flex;
+  width: 20%;
+  justify-content: center;
+  color: white;
+}
+
+.details {
+  display: flex;
+  width: 20%;
+  justify-content: center;
+  color: white;
+}
+
+.favorites {
+  display: flex;
+  width: 20%;
+  justify-content: center;
+  color: white;
+}
+
+.containerTrophy {
+  padding: 16px;
+  background: #f7f9fc;
+  width: 100%;
+  height: 100%;
+}
+
+.tagTrophy {
+  padding: 4px 0 0 10px;
+  border-radius: 10px 10px 0 0;
+  background: linear-gradient(#47feb0, #1de3ca);
+  height: 2rem;
+  margin-top: 30px;
+  width: 40%;
+}
+
+.trophy {
+  height: 17%;
+  background: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 2px 5px 10px #e0dfdf;
+}
+
+.trophyIcon {
+  height: 100%;
+  width: 18%;
+  background: linear-gradient(#47feb0, #1de3ca);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: white;
+}
+
+.trophyLegend {
+  padding: 12.5px 50px 15px 30px;
+  width: 82%;
+}
+
+.label {
+  font-size: 18px;
+  margin: 0;
+  font-family: Roboto;
+}
+
+.bottomContainer {
+  height: 58%;
+  background: white;
+  margin-top: 30px;
+  box-shadow: 2px 5px 10px #e0dfdf;
+}
+
+.statisticsContainer {
+  height: 28%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.statistics {
+  margin-right: 30%;
+  padding: 10px;
+}
+
+.statisticsTitle {
+  font-size: 22px;
+  margin: 0;
+  font-family: Roboto;
+}
+
+.statisticsIcon {
+  height: 100%;
+  width: 18%;
+  background: linear-gradient(#ee699d, #fb5b67);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: white;
+}
+
+.statisticsData {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.chartContainer {
+  height: 100%;
+  width: 57%;
+  display: flex;
+  justify-content: center;
+}
+
+.line {
+  height: 100%;
+  width: 1%;
+}
+
+.infoQuizzes {
+  height: 100%;
+  width: 42%;
+  padding: 35px 20px 25px 22px;
+}
