--- a/src/app/pages/orgs/orgs.page.html
+++ b/src/app/pages/orgs/orgs.page.html
@@ -8,5 +8,32 @@
 </ion-header>
 
 <ion-content>
+<img src="{{logo}}" />
+<p>   {{id}} </p>
+<p> {{email}} </p>
+<p> {{description}} </p>
+<p> {{country}} </p>
+<p> {{city}} </p>
+
+<ion-item-sliding *ngFor="let q of schoolQuizzes" >
+     
+  <ion-card>
+    <div class="quizImg">
+      <img src="{{q.logo}}" />
+    </div>
+    <ion-card-header>
+      <ion-card-title>{{q.name}}</ion-card-title>
+      <ion-card-subtitle>{{q.quantity}} preguntas</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>{{q.description}}</ion-card-content>
+
+    <ion-button color="light"
+   
+    >
+     Inscribirse
+      
+    </ion-button>
+  </ion-card>
+</ion-item-sliding>
 
 </ion-content>
