--- a/src/app/pages/profile-details/profile-details.page.html
+++ b/src/app/pages/profile-details/profile-details.page.html
@@ -13,7 +13,7 @@
             Detalles
           </div>    
           <div  routerLink="/tabs/profile-messages" style="display: flex; width: 20%; justify-content: center;color:white">
-            Mensajes
+            Favoritos
           </div>   
         </div>    
   </div>
