--- a/src/app/pages/profile-messages/profile-messages.page.html
+++ b/src/app/pages/profile-messages/profile-messages.page.html
@@ -13,7 +13,7 @@
             Detalles
           </div>    
           <div   style="border-bottom: solid white; display: flex; width: 20%; justify-content: center;color:white">
-            Mensajes
+            Favoritos
           </div>   
         </div>    
   </div>
