--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -21,6 +21,10 @@
           <ion-icon name="school" slot="start"></ion-icon>
           <ion-label>Organizaciones</ion-label>
         </ion-item>
+        <ion-item routerLink="/home">
+          <!-- <ion-icon name="school" slot="start"></ion-icon> -->
+          <ion-label>Logout</ion-label>
+        </ion-item>
       </ion-list>
      </ion-content>
   </ion-menu>
