changing pages names

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -18,7 +18,7 @@
     <div class="containerMenu">
       <div class="general">General</div>
       <div routerLink="/tabs/profile-details" class="details">Detalles</div>
-      <div routerLink="/tabs/profile-messages" class="favorites">Favoritos</div>
+      <div routerLink="/tabs/profile-favs" class="favorites">Favoritos</div>
     </div>
   </div>
 </ion-header>
