--- a/src/app/pages/profile-details/profile-details.page.html
+++ b/src/app/pages/profile-details/profile-details.page.html
@@ -12,7 +12,7 @@
           <div style="border-bottom: solid white; display: flex; width: 20%; justify-content: center;color:white">
             Detalles
           </div>    
-          <div  routerLink="/tabs/profile-messages" style="display: flex; width: 20%; justify-content: center;color:white">
+          <div  routerLink="/tabs/profile-favs" style="display: flex; width: 20%; justify-content: center;color:white">
             Favoritos
           </div>   
         </div>    
