--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -13,11 +13,11 @@
           <ion-icon name="contact" slot="start"></ion-icon>
           <ion-label>Mi Cuenta</ion-label>
         </ion-item>
-        <ion-item routerLink="/tabs/games">
+        <ion-item routerLink="/tabs/quizzes">
           <ion-icon name="list-box" slot="start"></ion-icon>
           <ion-label>Mis quizzes</ion-label>
         </ion-item>
-        <ion-item routerLink="/tabs/docs">
+        <ion-item routerLink="/tabs/schoolsList">
           <ion-icon name="school" slot="start"></ion-icon>
           <ion-label>Organizaciones</ion-label>
         </ion-item>
