--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -22,7 +22,7 @@
           <ion-label>Organizaciones</ion-label>
         </ion-item>
         <ion-item routerLink="/home">
-          <!-- <ion-icon name="school" slot="start"></ion-icon> -->
+          <ion-icon name="log-out" slot="start"></ion-icon>
           <ion-label>Logout</ion-label>
         </ion-item>
       </ion-list>
